2019-05-03  Rosen Penev  <rosenp@gmail.com>

	* color.c (parse_opt): Cast program_invocation_short_name to char *.

2018-11-04  Mark Wielaard  <mark@klomp.org>

	* bpf.h: Add BPF_JLT, BPF_JLE, BPF_JSLT and BPF_JSLE.

2018-07-04  Ross Burton <ross.burton@intel.com>

	* color.c: Remove error.h, add system.h include.
	* system.h: Add error.h include.
	* xmalloc.c: Remove error.h include.

2018-06-01  Mark Wielaard  <mark@klomp.org>

	* printversion.c (print_version): Update copyright year.

2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* eu-config.h (FALLTHROUGH): New macro.

2017-10-16  Mark Wielaard  <mark@klomp.org>

	* md5.{c,h}: Removed.
	* sha1.{c,h}: Likewise.
	* Makefile.am (libeu_a_SOURCES): Remove md5.c and sha1.c.
	(noinst_HEADERS): Remove md5.h and sha1.h.

2017-08-18  Ulf Hermann  <ulf.hermann@qt.io>

	* eu-config.h: Define attribute_packed to either
	__attribute__((packed)) or __attribute__((packed, gcc_struct)).

2017-04-27  Ulf Hermann  <ulf.hermann@qt.io>

	* eu-config.h: Define attribute_hidden to be empty if the compiler
	doesn't support it.

2017-04-27  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Use fpic_CFLAGS.

2017-07-18  Mark Wielaard  <mark@klomp.org>

	* bpf.h: New file.
	* Makefile.am (noinst_HEADERS): Add bpf.h

2017-05-05  Mark Wielaard  <mark@klomp.org>

	* printversion.c (print_version): Update copyright year.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* crc32.c: include config.h.
	* system.h: Don't include config.h.

2017-02-16  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am (libeu_a_SOURCES): Remove version.c, add printversion.c
	(noinst_HEADERS): Add printversion.h
	* version.c: Moved to printversion.c.
	* printversion.c: New file, moved from version.c,
	remove stdio.h, argp.h, system.h includes,
	add printversion.h include.
	* printversion.h: New file.
	* system.h: Remove argp.h include,
	(ARGP_PROGRAM_VERSION_HOOK_DEF, ARGP_PROGRAM_BUG_ADDRESS_DEF): Remove.
	(print_version): Remove.
